--- a/package.json
+++ b/package.json
@@ -10,19 +10,31 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.45.1",
+    "@types/aos": "^3.0.7",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
     "install": "^0.13.0",
     "npm": "^10.8.1",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
+    "react-lazy-load-image-component": "^1.6.2",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.23.1",
-    "sooner": "^1.1.4"
+    "react-scroll": "^1.9.0",
+    "react-spinners": "^0.13.8",
+    "react-typed": "^2.0.12",
+    "reactjs-popup": "^2.0.6",
+    "sonner": "^1.5.0",
+    "sooner": "^1.1.4",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-lazy-load-image-component": "^1.6.4",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
