--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.6.0",
     "@tanstack/react-query": "^5.45.1",
     "@types/aos": "^3.0.7",
     "aos": "^2.3.4",
@@ -29,7 +30,8 @@
     "reactjs-popup": "^2.0.6",
     "sonner": "^1.5.0",
     "sooner": "^1.1.4",
-    "typed.js": "^2.1.0"
+    "typed.js": "^2.1.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
