--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@hookform/resolvers": "^3.6.0",
     "@tanstack/react-query": "^5.45.1",
     "@types/aos": "^3.0.7",
+    "@types/leaflet": "^1.9.12",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
     "install": "^0.13.0",
+    "leaflet": "^1.9.4",
     "npm": "^10.8.1",
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
     "react-lazy-load-image-component": "^1.6.2",
+    "react-leaflet": "^4.2.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.23.1",
     "react-scroll": "^1.9.0",
@@ -34,8 +37,8 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@types/react-lazy-load-image-component": "^1.6.4",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
