--- a/package.json
+++ b/package.json
@@ -16,13 +16,19 @@
     "@types/leaflet": "^1.9.12",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
+    "blurhash": "^2.0.5",
+    "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.5.2",
     "install": "^0.13.0",
     "leaflet": "^1.9.4",
     "npm": "^10.8.1",
     "react": "^18.2.0",
+    "react-blurhash": "^0.3.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
+    "react-i18next": "^14.1.2",
     "react-lazy-load-image-component": "^1.6.2",
     "react-leaflet": "^4.2.1",
     "react-query": "^3.39.3",
