--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "install": "^0.13.0",
     "leaflet": "^1.9.4",
     "npm": "^10.8.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-blurhash": "^0.3.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
     "react-i18next": "^14.1.2",
+    "react-infinite-logo-slider": "^1.0.13",
     "react-lazy-load-image-component": "^1.6.2",
     "react-leaflet": "^4.2.1",
     "react-query": "^3.39.3",
