--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.1.1",
     "@hookform/resolvers": "^3.6.0",
+    "@mui/icons-material": "^6.4.0",
+    "@mui/material": "^6.4.0",
+    "@mui/styled-engine-sc": "^6.4.0",
     "@tanstack/react-query": "^5.45.1",
     "@types/aos": "^3.0.7",
     "@types/leaflet": "^1.9.12",
@@ -41,6 +47,7 @@
     "reactjs-popup": "^2.0.6",
     "sonner": "^1.5.0",
     "sooner": "^1.1.4",
+    "styled-components": "^6.1.14",
     "typed.js": "^2.1.0",
     "zod": "^3.23.8"
   },
@@ -57,7 +64,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.2.2",
+    "typescript": "^5.7.3",
     "vite": "^5.2.0"
   }
 }
