--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,28 +12,45 @@ jobs:
     steps:
       # Step 1: Checkout the code
       - name: Checkout code
-        uses: actions/checkout@v3
+        but not supplied. It seems the secret `_PRODUCTION uses: actions/checkout@v3
 
-      # Step 2: Set up Node.js
+      # Step 2: Set up_DEPLOYMENT` might not be correctly referenced in the workflow Node.js
       - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
+        uses.
 
-      # Step 3: Install dependencies and build the project
+Here is the corrected `deploy.yml` file to: actions/setup-node@v3
+        with:
+          node-version ensure the secrets are correctly referenced:
+
+```: 18
+
+      # Step 3: Install dependencies and buildyaml
+name: Deploy to aHost
+
+on:
+  push:
+    branches:
+ the project
       - name: Install dependencies and build
         run: |
           npm install
-          npm run build
+          npm run build      - main
+
+jobs:
+  deploy:
+    runs-on: ubuntu-l
 
       # Step 4: Deploy files via FTP
       - name: Deploy via FTP
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.0
+        uses: SamKirkland/atest
+
+    steps:
+      # Step 1: Checkout the codeFTP-Deploy-Action@v4.3.0
         with:
-          server: ${{ secrets._PRODUCTION_DEPLOYMENT.FTP_HOST }}
-          username: ${{ secrets._PRODUCTION_DEPLOYMENT.FTP_USERNAME }}
-          password: ${{ secrets._PRODUCTION_DEPLOYMENT.FTP_PASSWORD }}
+          server: ${{ secrets.FTP_HOST }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
           protocol: ftp
-          port: ${{ secrets._PRODUCTION_DEPLOYMENT.FTP_PORT }}
+          port: ${{ secrets.FTP_PORT }}
           local-dir: ./build
           server-dir: /public_html
