--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,10 +30,10 @@ jobs:
       - name: Deploy via FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.0
         with:
-          server: ${{ secrets._PRODUCTION_DEPLOYMENT.FTP_HOST }}
-          username: ${{ secrets._PRODUCTION_DEPLOYMENT.FTP_USERNAME }}
-          password: ${{ secrets._PRODUCTION_DEPLOYMENT.FTP_PASSWORD }}
+          server: ${{ secrets.FTP_HOST }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
           protocol: ftp
-          port: ${{ secrets._PRODUCTION_DEPLOYMENT.FTP_PORT }}
+          port: ${{ secrets.FTP_PORT }}
           local-dir: ./dist
           server-dir: /public_html
